# serdes

./: .dnt.db  .gitignore  .todo  Makefile.am  Makefile.sub  bootstrap  configure.ac  configure.ac.in  python.af
data/: Makefile.am
docs/: Makefile.am
site/in/: contents.as  development.scm  downloads.scm  footer.sxml  index.scm  installation.scm  map.as  site.as
src/: Autoconfiguration.py.in  Command.py  Configuration.py  Debug.py  Exceptions.py  INI.py  Makefile.am  Trace.py  __init__.py  idlgen.in
tools/autotools/m4/: Makefile.am  ax_prog_python_modules.m4  ax_prog_python_version.m4
tools/maint/: Makefile.am  python-autofrisk
